--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.2",
+    "formik": "^2.2.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "redux": "4.2.1"
+    "redux": "4.2.1",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "1.5.0",
