--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,15 @@ sketch
 .idea
 
 # End of https://www.toptal.com/developers/gitignore/api/react,node,yarn,visualstudiocode
+
+#alternatives
+
+/workspacelight: {
+    gray: {
+      100: "#fafafa",
+      200: "#e4e5f1",
+      300: "#d2d3db",
+      400: "#9394a5",
+      500: "#484b6a",
+    }
+  }
